--- a/estilo/style.css
+++ b/estilo/style.css
@@ -35,14 +35,14 @@ body {
 }
 
 header {
-    min-height: 100px;
-    background-image: url('../imagens/encryption.jpg');
-    background-size: cover;
+    background-image: linear-gradient(180deg, rgba(0,0,0,.8), rgba(0,0,0,.0), rgba(0,0,0,.8));
     text-align: center;
+    text-shadow: rgba(0, 0, 0, .8) 0px 0px 5px;
 }
 
-header .sombra {
-    background-image: linear-gradient(180deg, rgba(0,0,0,.0), rgba(0,0,0,.8));
+.conteiner {
+    background-image: url('../imagens/encryption.jpg');
+    background-size: cover;
 }
 
 main {
@@ -55,6 +55,14 @@ main {
     padding: 20px;
     border-radius: 0px 0px 10px 10px;
     box-shadow: rgba(0, 0, 0, .4) 0px 0px 20px;
+}
+
+article.indice {
+    background-color: var(--cyan);
+    color: var(--dark-blue);
+    max-width: 600px;
+    margin: auto;
+    border-radius: 10px;
 }
 
 footer {
