Adição do conteudo

--- a/estilo/style.css
+++ b/estilo/style.css
@@ -21,12 +21,12 @@ nav#menu {
 
 .conteiner {
     background-color: var(--dark-blue);
-    background-image: url('../imagens/encryption.jpg');
+    background-image: url('../imagens/fundo-0.jpg');
     background-size: cover;
     box-shadow: rgba(0, 0, 0, .2) 0px 0px 16px;
 }
 
-main {
+.main {
     background-color: var(--white);
     color: var(--dark-grey);
     max-width: 800px;
@@ -34,13 +34,19 @@ main {
     margin: auto;
     margin-bottom: 20px;
     padding: 20px;
-    border-radius: 0px 0px 10px 10px;
     box-shadow: rgba(0, 0, 0, .2) 0px 0px 16px;
+}
+
+article.main {
+    border-radius: 10px;
+}
+
+main {
+    border-radius: 0px 0px 10px 10px;
 }
 
 article.indice {
     background-color: var(--cyan);
-    color: var(--dark-blue);
     max-width: 600px;
     margin: auto;
     border-radius: 10px;
