--- a/estilo/elementos.css
+++ b/estilo/elementos.css
@@ -62,9 +62,32 @@ nav#menu #actual {
     font-weight: bolder;
 }
 
-main p {
+.main dl {
+    padding: 0px 20px;
+}
+
+.main p, dd {
     text-indent: 30px;
     text-align: justify;
+}
+
+.main dt, .main strong {
+    color: var(--cyan);
+    font-weight: bolder;
+}
+
+.video {
+    margin: 0px -20px;
+    position: relative;
+    padding-bottom: 400px;
+}
+
+.video iframe {
+    position: absolute;
+    width: 90%;
+    height: 90%;
+    left: 5%;
+    top: 5%;
 }
 
 article.indice h2 {
@@ -75,6 +98,14 @@ article.indice h2 {
     border-bottom: 3px solid var(--white);
     text-indent: 20px;
     font-weight: lighter;
+}
+
+article.indice a, article.indice li {
+    color: var(--dark-blue);
+}
+
+article.indice ol {
+    columns: 2;
 }
 
 footer ul {
@@ -106,4 +137,23 @@ a {
 a:hover {
     color: var(--lighter-limom-green);
     text-decoration: underline;
+}
+
+.link-fixed {
+    color: var(--black);
+    text-decoration: none;
+    font-size: 20pt;
+    position: fixed;
+    right: 1rem;
+    bottom: 1rem;
+    z-index: 1500;
+    background-color: var(--limom-green);
+    padding: 0.6rem;
+    border-radius: 0.3rem;
+}
+
+a.link-fixed:hover {
+    font-weight: bolder; 
+    text-decoration: none;
+    color: var(--black);
 }
